--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+.App
+{
+    display: flex;
+    flex-direction: row;
+    height: 100vh;
+}
+.SideBarContainer {
+    display: flex;
+    background-color: red;
+    width: 250px;
+}
+.ContentContainer {
+    display: flex;
+    flex: 1;
+    background: linear-gradient(black, grey);
+}
+.Content {
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    margin: 2rem;
+    padding: 1rem;
+    border: 1px solid black;
+    border-radius: 20px;
+    overflow-y: scroll;
+    background: linear-gradient(orange, white);
+}
+.Content::-webkit-scrollbar {
+    width: 12px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.Content::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+    border-radius: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Content::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
