--- a/src/Template/SideNav.css
+++ b/src/Template/SideNav.css
@@ -13,10 +13,12 @@
     flex: 1;
     flex-direction: column;
     flex-wrap: nowrap;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding: 5px;
 }
-
+.itemContainer > ul > li :hover {
+    background-color: grey;
+}
 .itemContainer::-webkit-scrollbar {
     width: 12px;
 }
