--- a/src/Template/PageTemplateComponents/DownloadLink/DownlaadLinks.css
+++ b/src/Template/PageTemplateComponents/DownloadLink/DownlaadLinks.css
@@ -6,6 +6,7 @@
     background-color: lightblue;
     border-radius: 20px;
     padding: 10px;
+    margin: 10px;
 }
 .DownloadLink_Title {
     display: flex;
