--- a/src/Template/PageTemplateComponents/DownloadLink/DownlaadLinks.css
+++ b/src/Template/PageTemplateComponents/DownloadLink/DownlaadLinks.css
@@ -1,33 +1,20 @@
 .DownloadLink_Container {
     display: flex;
-    flex-direction: column;
-    width: 200px;
-    height: 150px;
-    background-color: lightblue;
-    border-radius: 20px;
-    padding: 10px;
-    margin: 10px;
-}
-.DownloadLink_Title {
-    display: flex;
-    flex : 1;
-    width: 100%;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
+    height: 60px;
+    border: 1px dotted black;
+    border-radius: 10px;
+    padding: 5px;
 }
-.DownloadLink_Title > a {
-    font-size: 20pt;
-    vertical-align: middle;
+.DownloadLink_Container > div {
+    flex : 1;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
-.DownloadLink_Btn {
-    height: 50px;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-}
-
-.DownloadLink_Btn > div > a {
-    width: 100%;
-    height: 100%;
+.DownloadLink_Container > div > span{
+    font-size: 12pt;
+    font-weight: bold;
 }
