--- a/src/App.css
+++ b/src/App.css
@@ -22,11 +22,12 @@
     flex-direction: column;
     margin: 2rem;
     padding: 1rem;
-    border: 1px solid black;
+    /* border: 1px solid black; */
+    box-shadow: 10px 10px 10px  black;
     border-radius: 20px;
     overflow-y: scroll;
-    /* background: white; */
-    background: linear-gradient(orange, white);
+    background: white;
+    /* background: linear-gradient(orange, white); */
 }
 .Content::-webkit-scrollbar {
     width: 12px;
